--- a/src/styles/test.scss
+++ b/src/styles/test.scss
@@ -1,3 +1,37 @@
-.fab-text {
-  font-size: 2em;
+$myColor: #009a82;
+$myString: " some text here ";
+$myFontSize1: 13px;
+$myFontSize2: 18px;
+$myFontSize3: 25px;
+$myMargin: 0px auto;
+$myWidth: 500px;
+
+#container {
+  width: $myWidth;
+  margin: $myMargin;
+
+  p {
+    font-family: Arial;
+    font-size: $myFontSize1;
+  }
+
+  h1 {
+    font-family: Tahoma;
+    font-size: $myFontSize3;
+  }
+
+  h2 {
+    font-family: Helvetica;
+    font-size: $myFontSize2;
+  }
+}
+
+@mixin border {
+  border: 1px solid red;
+}
+
+#container {
+  width: 960px;
+  margin: 6+5 auto;
+  @include border;
 }
