--- a/src/styles/test.scss
+++ b/src/styles/test.scss
@@ -1,3 +1,7 @@
+
+
+
+/*
 $myColor: #009a82;
 $myString: " some text here ";
 $myFontSize1: 13px;
@@ -35,3 +39,4 @@ $myWidth: 500px;
   margin: 6+5 auto;
   @include border;
 }
+*/
