Styling site heading
The website heading now looks good on mobile devices

Closes #21

--- a/src/styles/modules/_variables.scss
+++ b/src/styles/modules/_variables.scss
@@ -1,1 +1,6 @@
-// nothing for now...
+// General stuff (site-wide)
+$website-background-color: #f3f3f3;
+
+// site heading
+$website-heading-color: #3399ff;
+$website-heading-border-color: #6600cc;
