--- a/src/styles/partials/_typography.scss
+++ b/src/styles/partials/_typography.scss
@@ -1,20 +1,20 @@
 @font-face {
   font-family: 'Open Sans';
-  src: url('/fonts/OpenSans-Light-webfont.woff') format('woff');
+  src: url('/styles/fonts/OpenSans-Light-webfont.woff') format('woff');
   font-style: normal;
   font-weight: normal;
 }
 
 @font-face {
   font-family: 'Open Sans';
-  src: url('/fonts/OpenSans-LightItalic-webfont.woff') format('woff');
+  src: url('/styles/fonts/OpenSans-LightItalic-webfont.woff') format('woff');
   font-style: italic;
   font-weight: normal;
 }
 
 @font-face {
   font-family: 'Open Sans';
-  src: url('/fonts/OpenSans-Regular-webfont.woff') format('woff');
+  src: url('/styles/fonts/OpenSans-Regular-webfont.woff') format('woff');
   font-style: normal;
   font-weight: bold;
 }
@@ -23,4 +23,12 @@
 body {
   font-family: 'Open Sans', sans-serif;
   font-weight: normal;
+}
+
+strong {
+  font-weight: bold;
+}
+
+em {
+  font-style: italic;
 }
