updateing style corrections

--- a/src/styles/modules/_variables.scss
+++ b/src/styles/modules/_variables.scss
@@ -1,6 +1,11 @@
 // General stuff (site-wide)
 $website-background-color: #f3f3f3;
+$datetime-color: #099422;
 
 // site heading
 $website-heading-color: #3399ff;
 $website-heading-border-color: #6600cc;
+
+// tags
+$tag-background: #fff;
+$tag-border: #000;
