--- a/src/styles/partials/_layout.scss
+++ b/src/styles/partials/_layout.scss
@@ -3,7 +3,7 @@ body {
 }
 
 time {
-  color: #099422;
+  color: $datetime-color;
 }
 
 header {
@@ -47,9 +47,9 @@ article {
     margin-bottom: 20px;
 
     h4 {
-      margin-top: -15px;
-      margin-bottom: 5px;
       font-size: 12px;
+      margin-bottom: 5px;
+      margin-top: -15px;
     }
 
     ul {
@@ -58,24 +58,26 @@ article {
     }
 
     li {
-      font-size: 10px;
-      padding: 3px 5px;
       display: inline;
-      border: 1px dotted #000;
-      border-radius: 10px;
-      background-color: #fff;
-
-      a:link,
-      a:visited {
-        // color: $website-heading-color;
-        text-decoration: none;
-        min-width: 50px;  // enough for a finger tap, I think
-        display: inline-block;
-        color: darken($website-heading-color, 30%);
-      }
-
     }
 
+  }
+
+}
+
+.tag {
+  background-color: $tag-background;
+  border: 1px dotted $tag-border;
+  border-radius: 10px;
+  font-size: 10px;
+  padding: 3px 5px;
+
+  a:link,
+  a:visited {
+    color: darken($website-heading-color, 30%);
+    display: inline-block;
+    min-width: 50px;  // enough for a finger tap, I think
+    text-decoration: none;
   }
 
 }
