--- a/src/styles/partials/_layout.scss
+++ b/src/styles/partials/_layout.scss
@@ -40,7 +40,13 @@ header {
 article {
 
   header {
+    padding-bottom: 2px;
     border-bottom: 1px solid $website-heading-border-color;
+
+    h1 {
+      font-size: 30px;
+      margin: 0;
+    }
   }
 
   footer {
@@ -59,6 +65,51 @@ article {
 
     li {
       display: inline;
+    }
+
+  }
+
+  /* Elements within articles */
+
+  // Headings
+  h1 {
+    font-size: 24px;
+    font-variant: small-caps;
+    margin: 25px 0px 5px;
+  }
+
+  h2 {
+    font-size: 22px;
+    font-variant: small-caps;
+    margin: 15px 0px 5px;
+  }
+
+  // Text stuff
+  p {
+    font-size: 16px;
+    margin-bottom: 10px;
+    line-height: 125%;
+  }
+
+  section {
+
+    a {
+      text-decoration: none;
+    }
+
+    a:link {
+      color: $website-heading-color;
+      border-bottom: 1px dashed $website-heading-color;
+    }
+
+    a:visited {
+      color: darken($website-heading-color, 20%);
+      border-bottom: 1px solid darken($website-heading-color, 20%);
+    }
+
+    p:last-child a:last-child {
+      display: inline-block;
+      margin-bottom: 30px;
     }
 
   }
