--- a/src/styles/partials/_layout.scss
+++ b/src/styles/partials/_layout.scss
@@ -40,8 +40,8 @@ header {
 article {
 
   header {
-    padding-bottom: 2px;
     border-bottom: 1px solid $website-heading-border-color;
+    padding-bottom: 2px;
 
     h1 {
       font-size: 30px;
@@ -69,26 +69,26 @@ article {
 
   }
 
-  /* Elements within articles */
+  // Elements within articles
 
   // Headings
   h1 {
     font-size: 24px;
     font-variant: small-caps;
-    margin: 25px 0px 5px;
+    margin: 25px 0 5px;
   }
 
   h2 {
     font-size: 22px;
     font-variant: small-caps;
-    margin: 15px 0px 5px;
+    margin: 15px 0 5px;
   }
 
   // Text stuff
   p {
     font-size: 16px;
-    margin-bottom: 10px;
     line-height: 125%;
+    margin-bottom: 10px;
   }
 
   section {
@@ -98,16 +98,16 @@ article {
     }
 
     a:link {
-      color: $website-heading-color;
       border-bottom: 1px dashed $website-heading-color;
+      color: $website-heading-color;
     }
 
     a:visited {
-      color: darken($website-heading-color, 20%);
       border-bottom: 1px solid darken($website-heading-color, 20%);
+      color: darken($website-heading-color, 20%);
     }
 
-    p:last-child a:last-child {
+    p:last-child {
       display: inline-block;
       margin-bottom: 30px;
     }
